10_nexus/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonatype-nexus
  labels:
    app: sonatype-nexus
spec:
  type: NodePort
  ports:
  - name: sonatype-nexus
    port: 8081
    targetPort: 8081
    protocol: TCP
  - name: sonatype-nexus-docker-hosted
    port: 8551
    targetPort: 8551
    nodePort: 8551
    protocol: TCP
  - name: sonatype-nexus-docker-proxy
    port: 8552
    targetPort: 8552
    nodePort: 8552
    protocol: TCP
  - name: sonatype-nexus-docker-group
    port: 8553
    targetPort: 8553
    nodePort: 8553
    protocol: TCP
  selector:
    app: sonatype-nexus
