10_nexus/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nexus-ingress
  namespace: test-namespace
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefixStrip
spec:
  rules:
  - host: nexus.10.97.42.83.nip.io
    http:
      paths:
      - path: /
        backend:
          serviceName: sonatype-nexus
          servicePort: 8081
